# YTmanager

./: .gitignore  DESCRIPTION_TEMPLATE.md  README.md  THUMBNAIL_CAPTURE_UI_PLAN.md  character_aliases.example.json  character_master.example.json  master_dict_builder.md  pyproject.toml  rules.example.json
packaging/pyinstaller/: ytmanager.spec
packaging/windows/: ytmanager.iss
scripts/: analyze_channel_descriptions.py  build_character_master.py  import_character_master.py  merge_character_master.py  migrate_descriptions.py  update_character_master.py
src/ytmanager/: __init__.py  __main__.py  app.py  character_master.py  character_sources.py  character_status.py  description.py  ffmpeg_tools.py  local_upload.py  master_builder.py  migration.py  models.py  oauth.py  paths.py  rules.py  storage.py  thumbnail.py  thumbnail_upscale.py  timestamps.py  youtube_api.py
src/ytmanager/ui/: character_master_window.py  local_upload_widget.py  main_window.py
tests/: test_character_master.py  test_character_sources.py  test_character_status.py  test_description.py  test_ffmpeg_tools.py  test_local_upload.py  test_local_upload_widget.py  test_master_builder.py  test_migration.py  test_models.py  test_oauth.py  test_rules.py  test_storage.py  test_storage_suggestions.py  test_thumbnail.py  test_thumbnail_upscale.py  test_timestamps.py  test_youtube_payload.py
